initial fetch / simple rendering

--- a/client/src/app/views/home-view/home-view.component.html
+++ b/client/src/app/views/home-view/home-view.component.html
@@ -1,3 +1,6 @@
-<p>
-  home-view works!
-</p>
+<p>home-view works!</p>
+
+<ul>
+    <li><a href="/ties/">View ties list</a></li>
+    <li><a href="/ties/new">Add a tie</a></li>
+</ul>
