--- a/client/src/app/views/ties-view/ties-view.component.html
+++ b/client/src/app/views/ties-view/ties-view.component.html
@@ -1,3 +1,5 @@
-<p>
-  ties-view works!
-</p>
+<ul>
+    <li *ngFor="let tie of tiesList">
+        <a href="ties/{{tie._id}}">{{tie.name}}</a>
+    </li>
+</ul>
