--- a/client/src/app/views/ties-view/ties-view.component.html
+++ b/client/src/app/views/ties-view/ties-view.component.html
@@ -1,5 +1,5 @@
 <ul>
     <li *ngFor="let tie of tiesList">
-        <a href="ties/{{tie._id}}">{{tie.name}}</a>
+        <a href="ties/{{tie.id}}">{{tie.name}}</a>
     </li>
 </ul>
