--- a/client/src/app/views/tie-view/tie-view.component.scss
+++ b/client/src/app/views/tie-view/tie-view.component.scss
@@ -2,8 +2,27 @@
     margin: 10px;
 
     mat-card-content {
-        height: 300px;
-        border: 1px solid lightgray;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1em;
+
+        #descriptionMarkdownEditable {
+            textarea {
+                padding: 5px;
+                border: 1px solid lightgray;
+                height: 400px;
+            }
+        }
+
+        #descriptionMarkdownDisplay {
+            padding: 5px;
+            height: 400px;
+            border: 1px solid lightgray;
+        }
+
+        #descriptionMarkdownDisplay:first-child {
+            grid-column: 1 / 3;
+        }
     }
 
     .mat-card-actions {
