--- a/client/src/app/views/tie-view/tie-view.component.scss
+++ b/client/src/app/views/tie-view/tie-view.component.scss
@@ -6,14 +6,7 @@
         grid-template-columns: 1fr 1fr;
         gap: 1em;
 
-        #descriptionMarkdownEditable {
-            textarea {
-                padding: 5px;
-                border: 1px solid lightgray;
-                height: 400px;
-            }
-        }
-
+        #descriptionMarkdownEditable,
         #descriptionMarkdownDisplay {
             padding: 5px;
             height: 400px;
