css => scss; add common header & footer

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<header>
+    <a href="/">shibari notes</a>
+</header>
+
+<main>
+    <router-outlet></router-outlet>
+</main>
+
+<footer>
+    footer content w00t!
+</footer>
