Change href to [routerLink] to fix AppModule init on every navigation

--- a/client/src/app/views/home-view/home-view.component.html
+++ b/client/src/app/views/home-view/home-view.component.html
@@ -1,6 +1,6 @@
 <p>home-view works!</p>
 
 <ul>
-    <li><a href="/ties/">View ties list</a></li>
-    <li><a href="/ties/new">Add a tie</a></li>
+    <li><a [routerLink]="['ties']">View ties list</a></li>
+    <li><a [routerLink]="['ties/new']">Add a tie</a></li>
 </ul>
