Allow Observables to complete before accessing TiesService

--- a/client/src/app/views/tie-view/tie-view.component.html
+++ b/client/src/app/views/tie-view/tie-view.component.html
@@ -18,7 +18,7 @@ created: string;
 <mat-card-footer>	  Section anchored to the bottom of the card
 -->
 
-<mat-card>
+<mat-card *ngIf="tie">
     <mat-card-title>
         <input id="tie-name" (click)="navigateToTiesFilteredBy('name')" placeholder="Tie name" [disabled]="!isContentEditable" [(ngModel)]="tie.name" />
     </mat-card-title>
